--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "devStart": "nodemon server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pintubordoloi/NorthEastKnow.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pintubordoloi/NorthEastKnow/issues"
+  },
+  "homepage": "https://github.com/pintubordoloi/NorthEastKnow#readme",
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
